# komodo-gui-launcher

./: .gitignore  CMakeLists.txt  LauncherApp.pro  MainWindow.cpp  MainWindow.h  Makefile.am  README.md  autogen.sh  build_static_qt.sh  configure.ac  main.cpp
.github/workflows/: build.yml
